--- a/tut8 semantic tags.html
+++ b/tut8 semantic tags.html
@@ -201,12 +201,9 @@
 <p>The full form of <abbr title="Indo Swiss Training Center">ISTC</abbr> is Indo-Swiss Training Center.</p>
 
 
+<!-- here we done all about HTML -->
 
-
-
-
-
-
+<h1> This is the end of HTML</h1>
 
 </body>
 
