--- a/tut10 Css Selector.html
+++ b/tut10 Css Selector.html
@@ -8,6 +8,11 @@
     <title>CSS Selectors</title>
 
     <style>
+
+        /* universal selectors  */
+        *{
+            box-sizing: border-box;
+        }
         /* this is Element selector  */
         p {
             color: rgb(255, 255, 200);
