--- a/tut13 css colors.html
+++ b/tut13 css colors.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colors in CSS</title>
     <style>
+        #firstpara {
+            color: blue;
+        }
 
+        #Secondpara {
+            color: rgb(0, 255, 0);
+            }
+
+            #thirdPara{
+                color: #ff77ff;
+            }
     </style>
 </head>
+
 <body>
     <h2>Colors in CSS.</h2>
+
+    <p id="firstpara">This is our first paragraph.</p>
+
+    <p id="Secondpara">This is our Second paragraph.</p>
+
+    <p id="thirdPara">This is our third paragraph.</p>
 </body>
+
 </html>
