--- a/tut15 Box Model.html
+++ b/tut15 Box Model.html
@@ -15,7 +15,7 @@
         }
 
         body {
-            background-image: url('waterDrop.jpg');
+            background-image: url('AwaterDrop.jpg');
             background-repeat: no-repeat;
             background-position:30% 80% ;
             /* background-position: horizontal% vertical% ; background-position: horizontal(px) vertical(px) */
@@ -54,7 +54,7 @@
             /* margin: y(top/bottom) x(left/right);  */
 
             /* padding: y(top/bottom) x(left/right);  */
-            margin: 7px 43px;
+            margin: 7px 44px;
             padding: 31px 43px;
             border-radius: 20px;
             width: 680px;
