--- a/tut19 Display Property.html
+++ b/tut19 Display Property.html
@@ -1,17 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Display Property</title>
     <style>
-          
+        *{
+            box-sizing: border-box;
+        }
+        header {
+            margin: auto;
+            width: 1200px;
+            border: 2px solid red;
+            display: block;
+            /* we cannot set width when display:inline; , width only can set when display:block; */
+        }
+
+        img {
+            display: block;
+            margin: auto;
+            width: 50px;
+        }
+
+        h3 {
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            margin: 0px;
+            text-align: center;
+            font-size: 150%;
+        }
+        .box{
+            border: 6px solid black;
+            background-color: rgb(71, 71, 71);
+            color: white;
+            margin: 5px 0px;
+            padding: 25px;
+            display: inline-block;
+            width: 33.1%;
+        }
+        .container{
+            margin: auto;
+            width: 1200px;
+        }
     </style>
 </head>
+
 <body>
     <header class="top">
+        <img src="https://yt3.ggpht.com/yti/APfAmoH6oY_Yn8fbDLVjDLSLKLuBkAoycSgr8kJ9cdHtHg=s88-c-k-c0x00ffffff-no-rj-mo"
+            alt="">
         <h3>Welcome to my blog</h3>
     </header>
+    <div class="container">
+        <div class="box">
+            <h4>Headings</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita quasi necessitatibus, laboriosam eveniet amet mollitia doloribus provident, corporis cum sit unde, incidunt porro! Iure velit voluptatem eum quos eos optio mollitia facere perspiciatis pariatur, similique laborum? Ab illo soluta quidem modi reprehenderit fuga dignissimos.</p>
+        </div>
+        <div class="box">
+            <h4>Headings</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita quasi necessitatibus, laboriosam eveniet amet mollitia doloribus provident, corporis cum sit unde, incidunt porro! Iure velit voluptatem eum quos eos optio mollitia facere perspiciatis pariatur, similique laborum? Ab illo soluta quidem modi reprehenderit fuga dignissimos.</p>
+        </div>
+        <div class="box">
+            <h4>Headings</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita quasi necessitatibus, laboriosam eveniet amet mollitia doloribus provident, corporis cum sit unde, incidunt porro! Iure velit voluptatem eum quos eos optio mollitia facere perspiciatis pariatur, similique laborum? Ab illo soluta quidem modi reprehenderit fuga dignissimos.</p>
+        </div>
+    </div>
 </body>
+
 </html>
