--- a/1st Project/index.html
+++ b/1st Project/index.html
@@ -6,134 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gym fitness</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@500&display=swap" rel="stylesheet">
 
-    <style>
-        body {
-            /* Css Reset  */
-            font-family: 'Baloo Bhai 2', cursive;
-            color: white;
-            margin: 0px;
-            padding: 0px;
-            background-image: url('img/bg.jpg');
-        }
-
-        .left {
-            display: inline-block;
-            /* border: 2px solid red; */
-            position: absolute;
-            top: 23px;
-            left: 60px;
-        }
-
-        .left img {
-            width: 130px;
-            margin: -30px auto;
-            filter: hue-rotate(87deg);
-        }
-
-        .left div {
-            text-align: center;
-            line-height: 0px;
-            font-size: 16px;
-        }
-
-        .mid {
-            /* border: 2px solid yellow; */
-            margin: 30px auto;
-            width: 36%;
-            font-size: 21px;
-            font-weight: bold;
-        }
-
-        .mid a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 10px;
-        }
-
-        .mid ul li {
-            display: inline-block;
-            list-style: none;
-        }
-
-        .mid li a:hover,
-        .mid li a.active {
-            color: grey;
-            text-decoration: underline;
-            transition-duration: 0.5s;
-        }
-
-        .right {
-            display: inline-block;
-            /* border: 2px solid blue; */
-            position: absolute;
-            top: 44px;
-            right: 20px;
-        }
-
-        .btn {
-            margin: 0px 13px;
-            background-color: black;
-            border-radius: 10px;
-            font-size: 17px;
-            color: white;
-            padding: 0px 9px;
-            cursor: pointer;
-            font-family: 'Baloo Bhai 2', cursive;
-
-        }
-
-        .btn:hover {
-            background-color: rgb(57, 57, 57);
-        }
-
-        .container {
-            border: 4px solid white;
-            border-radius: 10px;
-            display: inline-block;
-            padding: 30px 2px;
-            position: absolute;
-            top: 247px;
-            right: 63px;
-            width: 29%;
-            height: 42%;
-        }
-
-        .form-group {
-            display: block;
-            font-size: 24px;
-            width: 318px;
-            height: 26px;
-            margin: 10px auto;
-            color: white;
-            text-align: center;
-            border-radius: 10px;
-            padding: 3px 2px;
-
-        }
-
-        div form .headf {
-            font-family: 'Baloo Bhai 2', cursive;
-            text-align: center;
-            font-size: 30px;
-            padding-bottom: 20px;
-        }
-
-        .sub {
-            margin: 20px auto;
-            width: 318px;
-            padding: 15px 0px;
-            line-height: 0px;
-            font-size: 28px;
-        }
-    </style>
 </head>
 
 <body>
     <header class="header">
         <!-- this is left box -->
+        <div>
+            <img src="img/bg.jpg" alt="bg">
+        </div>
         <div class="left">
             <img src="img/logo.png" alt="logo">
             <div>Gym Premium</div>
