--- a/Course/tut31 Transition in CSS.html
+++ b/Course/tut31 Transition in CSS.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,34 +9,37 @@
 </head>
 <style>
     /* html{
-         font-size: 16px; 
+        font-size: 16px; 
     } */
     h1 {
         text-align: center;
     }
-    .container{
-     display: flex;
-     justify-content: center;
-        
+
+    .container {
+        display: flex;
+        justify-content: center;
+
     }
-    #box{
+
+    #box {
         display: flex;
         background-color: blueviolet;
         justify-content: center;
         align-items: center;
         width: 20rem;
         height: 10rem;
-       /* transition-property: background-color;
-         transition-duration: 1s;
+        /* transition-property: background-color;
+        transition-duration: 1s;
         transition-timing-function: ease;
         transition-delay: .5s; */
 
         /* SHORT HAND FOR TRANSITION  */
-        /* transition: transition-proper transition-duration transition-timing-function transition-delay; */
+        /* transition: transition-property transition-duration transition-timing-function transition-delay; */
         /* transition: background-color 1s ease 0s; */
         transition: all 1s ease 0s;
     }
-    #box:hover{
+
+    #box:hover {
         background-color: violet;
         cursor: pointer;
         height: 12rem;
@@ -44,6 +48,7 @@
         font-size: 1.5rem;
     }
 </style>
+
 <body>
     <h1>This is our Heading</h1>
     <div class="container">
@@ -52,4 +57,5 @@
         </div>
     </div>
 </body>
+
 </html>
