--- a/2nd Project/index.html
+++ b/2nd Project/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All About Spaces | AloneSpace.com</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" media="screen and ( max-width: 1350px)" href="css/phone.css">
+    <link rel="stylesheet" media="screen and ( max-width: 970px)" href="css/tab.css">
+    <link rel="stylesheet" media="screen and ( max-width: 920px)" href="css/phone.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&family=Fira+Sans&display=swap"
